--- a/PowerApp/Src/ListaOKRs.fx.yaml
+++ b/PowerApp/Src/ListaOKRs.fx.yaml
@@ -260,14 +260,22 @@
                 ZIndex: =2
 
             CheckboxCanvas1 As Casilla:
+                Checked: =If(ThisItem.finalizado = true ,true,false)
                 DisplayMode: =DisplayMode.Edit
                 Height: =20
-                Label: =
-                OnCheck: =false
-                OnSelect: =Select(Parent)
+                Label: =""
+                OnCheck: |-
+                    =Patch(
+                        T_TAREAS_APP_GCI_003,
+                        LookUp(T_TAREAS_APP_GCI_003,ID = Gallery3.Selected.ID),
+                        {
+                            finalizado: true
+                        }
+                    )
+                OnSelect: =false
                 OnUncheck: =false
                 Width: =44
-                X: =389
+                X: =375
                 Y: =1
                 ZIndex: =3
 
@@ -544,6 +552,7 @@
             ZIndex: =25
 
         "Progress1_1 As 'Barra de progreso'":
+            AccessibleLabel: =Self.Value
             BasePaletteColor: =RGBA(249, 83, 109, 1)
             DisplayMode: =DisplayMode.Edit
             Height: =19
@@ -704,7 +713,14 @@
             HoverFill: |-
                 =ColorValue("#0099cc")
             OnSelect: |-
-                =Set(pouplista_2,true);
+                =If(
+                    Self.Text = "finalizar" && verificarTareas.Text = "false",  
+                    Notify(
+                        "No puede finalizar el KR sin completar las tareas",
+                        NotificationType.Error
+                    ),
+                    Set(pouplista_2,true)
+                );
                 If(
                     Self.Text = "aprobar",
                     Set(displayModeVar,DisplayMode.Edit),
@@ -731,10 +747,16 @@
                         "iniciar",
                         If(
                             estadoKRtext.Text  = "en curso", 
-                            "Finalizar",
+                            "finalizar",
                             ""
                         )
                     )
+                )
+            Visible: |-
+                =If(
+                    estadoKRtext.Text = "finalizado",
+                    false,
+                    true
                 )
             Width: =82
             X: =789
@@ -763,6 +785,15 @@
             X: =523
             Y: =9
             ZIndex: =37
+
+        verificarTareas As Texto:
+            DisplayMode: =DisplayMode.Edit
+            Height: =24
+            Text: =CountRows(Filter(T_TAREAS_APP_GCI_003,nombreKRAsociado.Id = ThisItem.ID,finalizado = true)) = Gallery3.AllItemsCount
+            Width: =56
+            X: =1037
+            Y: =6
+            ZIndex: =38
 
     filterEstado As Desplegable.pcfdataset:
         AccessibleLabel: ="Estado"
@@ -2045,4 +2076,26 @@
             X: =559
             Y: =220
             ZIndex: =9
+
+    Icon5 As icon.Sync:
+        BorderColor: =RGBA(238, 40, 122, 1)
+        BorderThickness: =4
+        Color: =RGBA(238, 40, 122, 1)
+        DisabledBorderColor: =RGBA(166, 166, 166, 1)
+        DisabledColor: =RGBA(244, 244, 244, 1)
+        Fill: =RGBA(255, 255, 255, 1)
+        Height: =35
+        Icon: =Icon.Reload
+        OnSelect: |-
+            =Refresh(T_OKR_APP_GCI_003);
+            Refresh(T_REG_STS_KR_APP_GCI_003);
+            Refresh(T_TAREAS_APP_GCI_003)
+        PaddingBottom: =8
+        PaddingLeft: =8
+        PaddingRight: =8
+        PaddingTop: =8
+        Width: =35
+        X: =1263
+        Y: =127
+        ZIndex: =18
 
