--- a/PowerApp/Src/Registrar_Kr.fx.yaml
+++ b/PowerApp/Src/Registrar_Kr.fx.yaml
@@ -80,13 +80,11 @@ Registrar_Kr As screen:
             
             Patch(
                 T_OKR_APP_GCI_003,
-                Defaults(T_OKR_APP_GCI_003),
+                form_Registrar.LastSubmit,
                 {
-                    Title: form_Registrar.LastSubmit.nombreKR, 
-                    codigoKR: "KR - " & Text(CountRows(T_OKR_APP_GCI_003) + 100, "0000")
+                    codigoKR: "KR-" & Text(CountRows(T_OKR_APP_GCI_003) + 100, "0000")
                 }
             );
-            
             //Registrar estado inicial del KR
             Patch(
                 T_REG_STS_KR_APP_GCI_003,
