--- a/PowerApp/Src/Registrar_Kr.fx.yaml
+++ b/PowerApp/Src/Registrar_Kr.fx.yaml
@@ -126,18 +126,19 @@ Registrar_Kr As screen:
             BorderStyle: =BorderStyle.Solid
             DataField: ="Q"
             Default: =ThisItem.Q
-            DisplayMode: =Parent.DisplayMode
+            DisplayMode: |
+                =DisplayMode.Edit
             DisplayName: =DataSourceInfo([@T_OKR_APP_GCI_003],DataSourceInfo.DisplayName,Q)
             Fill: =RGBA(0, 0, 0, 0)
             Height: =50
             Required: =false
-            Update: =DataCardValue32.Selected
+            Update: =DataCardValue26.Selected
             Width: =557
-            X: =0
+            X: =1
             Y: =3
             ZIndex: =1
 
-            DataCardKey32 As label:
+            DataCardKey27 As label:
                 AutoHeight: =true
                 Color: =App.Theme.Colors.Darker30
                 DisabledColor: =RGBA(166, 166, 166, 1)
@@ -151,7 +152,7 @@ Registrar_Kr As screen:
                 Y: =10
                 ZIndex: =1
 
-            DataCardValue32 As combobox:
+            DataCardValue26 As combobox:
                 BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                 ChevronBackground: =App.Theme.Colors.Primary
                 ChevronDisabledBackground: =RGBA(166, 166, 166, 1)
@@ -164,7 +165,7 @@ Registrar_Kr As screen:
                 DisabledColor: =RGBA(166, 166, 166, 1)
                 DisabledFill: =RGBA(244, 244, 244, 1)
                 DisplayFields: =["Value"]
-                DisplayMode: =Parent.DisplayMode
+                DisplayMode: =DisplayMode.Disabled
                 Font: =App.Theme.Font
                 HoverColor: =RGBA(0, 0, 0, 1)
                 HoverFill: =App.Theme.Colors.Lighter70
@@ -173,7 +174,7 @@ Registrar_Kr As screen:
                 PressedColor: =App.Theme.Colors.PrimaryForeground
                 PressedFill: =App.Theme.Colors.Darker30
                 SearchFields: =["Value"]
-                SearchItems: =Choices(T_OKR_APP_GCI_003.Q,DataCardValue32.SearchText)
+                SearchItems: =Choices(T_OKR_APP_GCI_003.Q,DataCardValue26.SearchText)
                 SelectionColor: =App.Theme.Colors.PrimaryForeground
                 SelectionFill: =App.Theme.Colors.Primary
                 SelectMultiple: =false
@@ -181,10 +182,10 @@ Registrar_Kr As screen:
                 Tooltip: =Parent.DisplayName
                 Width: =Parent.Width - 60
                 X: =30
-                Y: =DataCardKey32.Y + DataCardKey32.Height + 5
+                Y: =DataCardKey27.Y + DataCardKey27.Height + 5
                 ZIndex: =2
 
-            ErrorMessage32 As label:
+            ErrorMessage27 As label:
                 AutoHeight: =true
                 Color: =RGBA(168, 0, 0, 1)
                 DisabledColor: =RGBA(166, 166, 166, 1)
@@ -200,21 +201,21 @@ Registrar_Kr As screen:
                 Visible: =Parent.DisplayMode=DisplayMode.Edit
                 Width: =Parent.Width - 60
                 X: =30
-                Y: =DataCardValue32.Y + DataCardValue32.Height
+                Y: =DataCardValue26.Y + DataCardValue26.Height
                 ZIndex: =3
 
-            StarVisible32 As label:
+            StarVisible27 As label:
                 Align: =Align.Center
                 Color: =App.Theme.Colors.Darker30
                 DisabledColor: =RGBA(166, 166, 166, 1)
                 Font: =App.Theme.Font
-                Height: =DataCardKey32.Height
+                Height: =DataCardKey27.Height
                 Size: =13
                 Text: ="*"
                 Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
                 Width: =30
                 Wrap: =false
-                Y: =DataCardKey32.Y
+                Y: =DataCardKey27.Y
                 ZIndex: =4
 
         lineaBase_DataCard1 As typedDataCard.textualEditCard:
@@ -553,6 +554,7 @@ Registrar_Kr As screen:
                 DisabledColor: =RGBA(166, 166, 166, 1)
                 DisabledFill: =RGBA(244, 244, 244, 1)
                 DisplayMode: =Parent.DisplayMode
+                Fill: =RGBA(0, 0, 0, 0)
                 FocusedBorderThickness: =4
                 Font: =App.Theme.Font
                 HoverBorderColor: =App.Theme.Colors.Darker40
@@ -928,7 +930,7 @@ Registrar_Kr As screen:
             Required: =false
             Update: =DataCardValue28.Selected
             Width: =557
-            X: =1
+            X: =0
             Y: =3
             ZIndex: =13
 
