--- a/PowerApp/Src/ListaOKRs.fx.yaml
+++ b/PowerApp/Src/ListaOKRs.fx.yaml
@@ -1646,7 +1646,7 @@
                 Update: =DataCardValue18.SelectedDate
                 Visible: =false
                 Width: =298
-                X: =1
+                X: =2
                 Y: =1
                 ZIndex: =1
 
@@ -1669,7 +1669,7 @@
                     Required: =Parent.Required
                     SelectedDate: |-
                         =If(
-                            IsBlank(seleccionarQ.Selected.Value),
+                            IsBlank(DataCardValue43.Selected.Value),
                             Parent.Default,
                             fecIniProgramado
                         )
@@ -1715,8 +1715,8 @@
                 Update: =DataCardValue19.SelectedDate
                 Visible: =false
                 Width: =298
-                X: =2
-                Y: =1
+                X: =0
+                Y: =2
                 ZIndex: =1
 
                 DataCardKey23 As Texto:
@@ -1738,7 +1738,7 @@
                     Required: =Parent.Required
                     SelectedDate: |-
                         =If(
-                            IsBlank(seleccionarQ.Selected.Value),
+                            IsBlank(DataCardValue43.Selected.Value),
                             Parent.Default,
                             fecFinProgramado
                         )
@@ -1769,6 +1769,83 @@
                     Width: =30
                     X: =0
                     Y: =DataCardKey23.Y
+                    ZIndex: =4
+
+            Q_DataCard1 As typedDataCard.fluentV9ComboBoxEditCard:
+                BorderColor: =App.Theme.Colors.Darker40
+                BorderStyle: =BorderStyle.Solid
+                DataField: ="Q"
+                Default: =ThisItem.Q
+                DisplayMode: =Parent.DisplayMode
+                DisplayName: =DataSourceInfo([@T_OKR_APP_GCI_003],DataSourceInfo.DisplayName,Q)
+                Fill: =RGBA(0, 0, 0, 0)
+                Height: =70
+                Required: =false
+                Update: =DataCardValue43.Selected
+                Width: =298
+                X: =1
+                Y: =1
+                ZIndex: =1
+
+                DataCardKey43 As Texto:
+                    DisplayMode: =DisplayMode.Edit
+                    FontColor: =RGBA(255, 255, 255, 1)
+                    Height: =22
+                    Text: ="trimestre"
+                    Weight: ='TextCanvas.Weight'.Semibold
+                    Width: =Parent.Width - 48
+                    Wrap: =false
+                    X: =24
+                    Y: =10
+                    ZIndex: =1
+
+                "DataCardValue43 As 'Cuadro combinado'.pcfdataset":
+                    AccessibleLabel: =Parent.DisplayName
+                    BasePaletteColor: =RGBA(8, 222, 8, 1)
+                    DefaultSelectedItems: =[Parent.Default]
+                    DisplayMode: =Parent.DisplayMode
+                    Fill: =RGBA(255, 255, 255, 1)
+                    Height: =32
+                    Items: =Choices([@T_OKR_APP_GCI_003].Q)
+                    OnChange: |-
+                        =Switch(
+                            Self.Selected.Value,
+                            "Q1", Set(fecIniProgramado,Date(Year(Today()),1,1));
+                                  Set(fecFinProgramado,Date(Year(Today()),3,31)),
+                            "Q2", Set(fecIniProgramado,Date(Year(Today()),4,1));
+                                  Set(fecFinProgramado,Date(Year(Today()),6,30)),
+                            "Q3", Set(fecIniProgramado,Date(Year(Today()),7,1));
+                                  Set(fecFinProgramado,Date(Year(Today()),9,30)),
+                            Set(fecIniProgramado,Date(Year(Today()),10,1));
+                            Set(fecFinProgramado,Date(Year(Today()),12,31))
+                        )
+                    Required: =Parent.Required
+                    ValidationState: =If(IsBlank(Parent.Error), "None", "Error")
+                    Width: =Parent.Width - 48
+                    X: =24
+                    Y: =DataCardKey43.Y + DataCardKey43.Height + 4
+                    ZIndex: =2
+
+                ErrorMessage43 As Texto:
+                    DisplayMode: =DisplayMode.Edit
+                    Height: =30
+                    Text: =Parent.Error
+                    Visible: =And(!IsBlank(Parent.Error), Parent.DisplayMode=DisplayMode.Edit)
+                    Width: =Parent.Width - 48
+                    Wrap: =true
+                    X: =24
+                    Y: =DataCardValue43.Y + DataCardValue43.Height
+                    ZIndex: =3
+
+                StarVisible43 As Texto:
+                    Align: ='TextCanvas.Align'.Center
+                    DisplayMode: =DisplayMode.Edit
+                    Height: =20
+                    Text: ="*"
+                    Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                    Width: =30
+                    X: =0
+                    Y: =DataCardKey43.Y
                     ZIndex: =4
 
             unidadDeMedida_DataCard1_1 As typedDataCard.fluentV9ComboBoxEditCard:
@@ -1990,69 +2067,116 @@
             Height: =44
             Icon: =Icon.Save
             OnSelect: |
-                =If(
-                    !IsBlank(DataCardValue21_1.Value) && !IsBlank(DataCardValue22_1.Value) && !IsBlank(DataCardValue15_1.Selected.Value) && !IsBlank(DataCardValue24_1.Value),
-                    Patch(
-                        T_OKR_APP_GCI_003,
-                        LookUp(
+                =Switch(
+                    estadoKRtext.Text,
+                
+                    "sin aprobación", 
+                    // Cambio de estado: sin aprobación -> programado / en curso
+                    If(// Se verifica que ningun campo esté vacio
+                        !IsBlank(DataCardValue21_1.Value) && !IsBlank(DataCardValue15_1.Selected.Value) && !IsBlank(DataCardValue24_1.Value) && !IsBlank(DataCardValue43.Selected.Value),
+                
+                        Patch(// Se actualizan el Q y las fechas de inicio y fin del Q
                             T_OKR_APP_GCI_003,
-                            ID = Gallery2.Selected.ID
-                        ),
-                        {
-                            fechaProgramadainicio: DataCardValue18.SelectedDate,
-                            fechaProgramadaFin: DataCardValue19.SelectedDate,
-                            alcanzadoPeriodo: Value(DataCardValue22_1.Value)
-                        }
-                    );
-                    If(
-                        estadoKRtext.Text = "sin aprobación" && DataCardValue18.SelectedDate > Today(),
-                        Set(
-                            varEstadoKr,
-                            "programado"
-                        ),
+                            LookUp(
+                                T_OKR_APP_GCI_003,
+                                ID = Gallery2.Selected.ID
+                            ),
+                            {
+                                fechaProgramadainicio: DataCardValue18.SelectedDate,
+                                fechaProgramadaFin: DataCardValue19.SelectedDate,
+                                Q: DataCardValue43.Selected
+                            }
+                        );
                         If(
-                            estadoKRtext.Text = "sin aprobación" && DataCardValue18.SelectedDate <= Today(),
+                            Value(Right(DataCardValue43.Selected.Value,1)) = RoundUp(Month(Now())/3,0),
                             Set(
                                 varEstadoKr,
                                 "en curso"
                             ),
                             If(
-                                estadoKRtext.Text = "en curso",
+                                Value(Right(DataCardValue43.Selected.Value,1)) > RoundUp(Month(Now())/3,0),
                                 Set(
                                     varEstadoKr,
-                                    "finalizado"
-                                )
+                                    "programado"
+                                ),
+                                Notify(
+                                    "No es posible programar en trimestres cerrados",
+                                    NotificationType.Error
+                                );
+                                Exit()
                             )
-                        )
-                    );
-                    Patch(
-                        T_REG_STS_KR_APP_GCI_003,
-                        LookUp(
-                            T_REG_STS_KR_APP_GCI_003,
-                            nombreKRAsociado.Id = Gallery2.Selected.ID && status.Value = "activo"
                         ),
-                        {status: {Value: "inactivo"}}
-                    );
-                    Patch(
-                        T_REG_STS_KR_APP_GCI_003,
-                        Defaults(T_REG_STS_KR_APP_GCI_003),
-                        {
-                            nombreEstado: varEstadoKr,
-                            nombreKRAsociado: {
-                                Id: Gallery2.Selected.ID,
-                                Value: Gallery2.Selected.nombreKR
-                            },
-                            status: {Value: "activo"}
-                        }
-                    );
-                    Set(
-                        pouplista_2,
-                        false
+                        Notify(
+                            "Hay campos requeridos que faltan completar",
+                            NotificationType.Error
+                        )
                     ),
-                    Notify(
-                        "Por favor, completa todos los campos.",
-                        NotificationType.Error
-                    )
+                
+                    "programado", 
+                    // Cambio de estado: programado -> en curso
+                    If(// Se verifica que ningun campo esté vacio
+                        !IsBlank(DataCardValue21_1.Value) && !IsBlank(DataCardValue15_1.Selected.Value) && !IsBlank(DataCardValue24_1.Value) && !IsBlank(DataCardValue43.Selected.Value),
+                
+                        Set(
+                            varEstadoKr,
+                            "en curso"
+                        ),
+                
+                        Notify(
+                            "Hay campos requeridos que faltan completar",
+                            NotificationType.Error
+                        )
+                    ),
+                    
+                    "en curso", 
+                    // Cambio de estado: en curso -> finalizado
+                    If(// Se verifica que ningun campo esté vacio
+                        !IsBlank(DataCardValue21_1.Value) && !IsBlank(DataCardValue22_1.Value) && !IsBlank(DataCardValue15_1.Selected.Value) && !IsBlank(DataCardValue24_1.Value) && !IsBlank(DataCardValue43.Selected.Value),
+                
+                        Patch(// Se actualizan las fechas de inicio y fin del periodo así como el resultado del periodo
+                            T_OKR_APP_GCI_003,
+                            LookUp(
+                                T_OKR_APP_GCI_003,
+                                ID = Gallery2.Selected.ID
+                            ),
+                            {
+                                alcanzadoPeriodo: Value(DataCardValue22_1.Value)
+                            }
+                        );
+                        
+                        Set(varEstadoKr,"finalizado");
+                        
+                        Patch(// Se pone en inactivo el estado anterior
+                            T_REG_STS_KR_APP_GCI_003,
+                            LookUp(
+                                T_REG_STS_KR_APP_GCI_003,
+                                nombreKRAsociado.Id = Gallery2.Selected.ID && status.Value = "activo"
+                            ),
+                            {status: {Value: "inactivo"}}
+                        );
+                        Patch(// se agrega un nuevo estado
+                            T_REG_STS_KR_APP_GCI_003,
+                            Defaults(T_REG_STS_KR_APP_GCI_003),
+                            {
+                                nombreEstado: varEstadoKr,
+                                nombreKRAsociado: {
+                                    Id: Gallery2.Selected.ID,
+                                    Value: Gallery2.Selected.nombreKR
+                                },
+                                status: {Value: "activo"}
+                            }
+                        );
+                        Set(
+                            pouplista_2,
+                            false
+                        ),
+                
+                        Notify(
+                            "Por favor, completa todos los campos.",
+                            NotificationType.Error
+                        )
+                    ),
+                    Blank()
                 );
                 Refresh(T_REG_STS_KR_APP_GCI_003);
                 Refresh(T_OKR_APP_GCI_003)
@@ -2082,42 +2206,6 @@
             X: =1072
             Y: =102
             ZIndex: =7
-
-        "seleccionarQ As 'Cuadro combinado'.pcfdataset":
-            BasePaletteColor: =RGBA(8, 222, 8, 1)
-            DisplayMode: =DisplayMode.Edit
-            Fill: =RGBA(255, 255, 255, 1)
-            Height: =32
-            Items: =["Q1", "Q2", "Q3", "Q4"]
-            OnChange: |-
-                =Switch(
-                    Self.Selected.Value,
-                    "Q1", Set(fecIniProgramado,Date(Year(Today()),1,1));
-                          Set(fecFinProgramado,Date(Year(Today()),3,31)),
-                    "Q2", Set(fecIniProgramado,Date(Year(Today()),4,1));
-                          Set(fecFinProgramado,Date(Year(Today()),6,30)),
-                    "Q3", Set(fecIniProgramado,Date(Year(Today()),7,1));
-                          Set(fecFinProgramado,Date(Year(Today()),9,30)),
-                    Set(fecIniProgramado,Date(Year(Today()),10,1));
-                    Set(fecFinProgramado,Date(Year(Today()),12,31))
-                )
-            Width: =100
-            X: =559
-            Y: =252
-            ZIndex: =8
-
-        TextCanvas5 As Texto:
-            DisplayMode: =DisplayMode.Edit
-            Font: =Font.'Segoe UI'
-            FontColor: =RGBA(255, 255, 255, 1)
-            Height: =32
-            Size: =15
-            Text: ="Trimestre"
-            Weight: ='TextCanvas.Weight'.Semibold
-            Width: =96
-            X: =559
-            Y: =220
-            ZIndex: =9
 
     Icon5 As icon.Sync:
         BorderColor: =RGBA(238, 40, 122, 1)
