--- a/PowerApp/Src/ListaOKRs.fx.yaml
+++ b/PowerApp/Src/ListaOKRs.fx.yaml
@@ -656,36 +656,6 @@
             Y: =165
             ZIndex: =32
 
-        Icon2 As icon.Edit:
-            BorderColor: =App.Theme.Colors.Darker40
-            Color: =App.Theme.Colors.Darker30
-            DisabledBorderColor: =RGBA(166, 166, 166, 1)
-            DisabledColor: =RGBA(244, 244, 244, 1)
-            Height: =20
-            Icon: =Icon.Edit
-            OnSelect: =Set(pouplista,true)
-            PaddingBottom: =2
-            PaddingLeft: =2
-            PaddingRight: =2
-            PaddingTop: =2
-            Width: =20
-            X: =1167
-            Y: =6
-            ZIndex: =33
-
-        TextCanvas2_11 As Texto:
-            Align: ='TextCanvas.Align'.Center
-            DisplayMode: =DisplayMode.Edit
-            Font: =Font.Arial
-            Height: =19
-            Text: |
-                ="Editar"
-            Weight: ='TextCanvas.Weight'.Semibold
-            Width: =55
-            X: =1182
-            Y: =6
-            ZIndex: =34
-
         TextCanvas2_12 As Texto:
             DisplayMode: =DisplayMode.Edit
             Height: =48
@@ -702,17 +672,18 @@
             BorderStyle: |+
                 =BorderStyle.Solid
                 
+            BorderThickness: =1
             Color: =App.Theme.Colors.PrimaryForeground
             DisabledBorderColor: =RGBA(244, 244, 244, 1)
             DisabledColor: =RGBA(166, 166, 166, 1)
             DisabledFill: =RGBA(244, 244, 244, 1)
             Fill: =RGBA(238,40,122,0.9)
             Font: =Font.Arial
-            Height: =20
-            HoverBorderColor: =App.Theme.Colors.Darker10
-            HoverColor: =Color.White
+            Height: =24
+            HoverBorderColor: =RGBA(214, 221, 224, 1)
+            HoverColor: =RGBA(0, 0, 0, 1)
             HoverFill: |-
-                =ColorValue("#0099cc")
+                =ColorValue("#f7f7f7")
             OnSelect: |-
                 =If(
                     Self.Text = "finalizar" && verificarTareas.Text = "false",  
@@ -791,54 +762,53 @@
             DisplayMode: =DisplayMode.Edit
             Height: =24
             Text: =CountRows(Filter(T_TAREAS_APP_GCI_003,nombreKRAsociado.Id = ThisItem.ID,finalizado = true)) = Gallery3.AllItemsCount
+            Visible: =false
             Width: =56
-            X: =1037
+            X: =1187
             Y: =6
             ZIndex: =38
 
-        btnAgregartareas As button:
-            BorderColor: =RGBA(238,40,122,1)
-            BorderStyle: |+
-                =BorderStyle.Solid
-                
-            Color: =App.Theme.Colors.PrimaryForeground
-            DisabledBorderColor: =RGBA(244, 244, 244, 1)
-            DisabledColor: =RGBA(166, 166, 166, 1)
-            DisabledFill: =RGBA(244, 244, 244, 1)
-            Fill: =RGBA(238,40,122,0.9)
-            Font: =Font.Arial
-            Height: =20
-            HoverBorderColor: =App.Theme.Colors.Darker10
-            HoverColor: =Color.White
-            HoverFill: |-
-                =ColorValue("#0099cc")
+        btnEditarKr As Botón:
+            Appearance: ='ButtonCanvas.Appearance'.Secondary
+            BasePaletteColor: =
+            DisplayMode: =DisplayMode.Edit
+            FontColor: =
+            FontSize: =14
+            FontWeight: =FontWeight.Semibold
+            Height: =25
+            Icon: ="Edit"
+            IconStyle: ='ButtonCanvas.IconStyle'.Outline
+            Layout: ='ButtonCanvas.Layout'.IconBefore
+            OnSelect: =Set(pouplista,true)
+            PaddingBottom: =2
+            PaddingTop: =2
+            Text: ="editar KR"
+            Width: =110
+            X: =1026
+            Y: =7
+            ZIndex: =41
+
+        btnAddTask As Botón:
+            Appearance: ='ButtonCanvas.Appearance'.Secondary
+            BasePaletteColor: =
+            DisplayMode: =DisplayMode.Edit
+            FontColor: =
+            FontSize: =14
+            FontWeight: =FontWeight.Semibold
+            Height: =25
+            Icon: ="Add"
+            IconStyle: ='ButtonCanvas.IconStyle'.Outline
+            Layout: ='ButtonCanvas.Layout'.IconBefore
             OnSelect: |-
                 =Set(pouplista_3,true);
                 NewForm(Form3)
             PaddingBottom: =2
-            PaddingLeft: =2
-            PaddingRight: =2
             PaddingTop: =2
-            PressedBorderColor: =App.Theme.Colors.Darker40
-            PressedColor: =Self.Color
-            PressedFill: =App.Theme.Colors.Darker40
-            RadiusBottomLeft: =4
-            RadiusBottomRight: =4
-            RadiusTopLeft: =4
-            RadiusTopRight: =4
-            Size: =10
-            Text: |
-                ="agregar tareas"
-            Visible: |-
-                =If(
-                    estadoKRtext.Text = "finalizado",
-                    false,
-                    true
-                )
-            Width: =120
-            X: =884
+            Text: ="agregar tarea"
+            Width: =135
+            X: =882
             Y: =7
-            ZIndex: =39
+            ZIndex: =42
 
     filterEstado As Desplegable.pcfdataset:
         AccessibleLabel: ="Estado"
@@ -2266,27 +2236,6 @@
             Y: =102
             ZIndex: =7
 
-    Icon5 As icon.Sync:
-        BorderColor: =RGBA(238, 40, 122, 1)
-        Color: =RGBA(238, 40, 122, 1)
-        DisabledBorderColor: =RGBA(166, 166, 166, 1)
-        DisabledColor: =RGBA(244, 244, 244, 1)
-        Fill: =RGBA(255, 255, 255, 1)
-        Height: =35
-        Icon: =Icon.Reload
-        OnSelect: |-
-            =Refresh(T_OKR_APP_GCI_003);
-            Refresh(T_REG_STS_KR_APP_GCI_003);
-            Refresh(T_TAREAS_APP_GCI_003)
-        PaddingBottom: =5
-        PaddingLeft: =5
-        PaddingRight: =5
-        PaddingTop: =5
-        Width: =35
-        X: =1263
-        Y: =127
-        ZIndex: =18
-
     Popup_2 As groupContainer.manualLayoutContainer:
         DropShadow: =DropShadow.Light
         Height: =668
@@ -2836,4 +2785,43 @@
                     Wrap: =false
                     Y: =DataCardKey42.Y
                     ZIndex: =4
+
+    btnAgregarKr As Botón:
+        Appearance: ='ButtonCanvas.Appearance'.Subtle
+        BasePaletteColor: =
+        DisplayMode: =DisplayMode.Edit
+        FontColor: =
+        FontSize: =0
+        FontWeight: =FontWeight.Semibold
+        Height: =32
+        Icon: ="Add"
+        IconStyle: ='ButtonCanvas.IconStyle'.Filled
+        Layout: ='ButtonCanvas.Layout'.IconBefore
+        OnSelect: =Navigate(Registrar_Kr)
+        Text: ="Agregar"
+        Width: =100
+        X: =1096
+        Y: =128
+        ZIndex: =21
+
+    btnActualizarVista As Botón:
+        Appearance: ='ButtonCanvas.Appearance'.Subtle
+        BasePaletteColor: =
+        DisplayMode: =DisplayMode.Edit
+        FontColor: =
+        FontSize: =0
+        FontWeight: =FontWeight.Semibold
+        Height: =32
+        Icon: ="ArrowSync"
+        IconStyle: ='ButtonCanvas.IconStyle'.Filled
+        Layout: ='ButtonCanvas.Layout'.IconBefore
+        OnSelect: |-
+            =Refresh(T_OKR_APP_GCI_003);
+            Refresh(T_REG_STS_KR_APP_GCI_003);
+            Refresh(T_TAREAS_APP_GCI_003)
+        Text: ="Sincronizar"
+        Width: =110
+        X: =1205
+        Y: =128
+        ZIndex: =22
 
